Replace JPA entities used as request bodies in Board and Thought controllers